--- a/views/home.html
+++ b/views/home.html
@@ -5,126 +5,124 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
-    />
-    <link rel="stylesheet" type="text/css" href="/css/intlTelInput.min.css" />
-    <style>
-      body {
-        background-color: rgb(134, 77, 187);
-      }
-      .iti__flag {
-        background-image: url("/img/flags.png");
-      }
-
-      @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-        .iti__flag {
-          background-image: url("/img/flags@2x.png");
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
   </head>
-
   <body>
-    <div class="container">
-      <div>
-        <h3>
-          <a
-            ><em
-              ><strong>ENTRERING?? please fill following details</strong></em
-            ></a
-          >
-        </h3>
+    <!-- Form-->
+    <div class="form">
+      <div class="form-toggle"></div>
+      <div class="form-toggle toggle-two"></div>
 
-        <form
-          action="/entry"
-          name="entryForm"
-          onsubmit="return validateForm()"
-          method="post"
-        >
-          <div class="row">
-            <label for="name"> Your name</label>
-            <input type="text" name="name" id="name" />
-
-            <label for="email"> Your email</label>
-            <input type="email" name="email" id="email" />
-
-            <label for="phone"> Your phone no</label>
-            <input type="tel" name="phone" id="phone" />
-
-            <div class="row">
+      <div class="form-panel one">
+        <div class="form-header">
+          <h1>Leaving</h1>
+        </div>
+        <div class="form-content">
+          <form action="/leave" method="POST">
+            <div class="form-group">
+              <label for="email">Enter Email</label>
               <input
-                type="submit"
-                class="button-primary three columns"
-                value="submit"
+                type="email"
+                id="email"
+                name="email"
+                required="required"
               />
             </div>
-          </div>
-        </form>
+         
+            <div class="form-group">
+                <label class="form-recovery" > <<------Visitor </label>
+                  <label class="form-recovery" >Update Host? ------->></label>
+            </div>
+
+            <div class="form-group">
+              <button type="submit">CheckOut</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      
+      <div class="form-panel two">
+        <div class="form-header">
+          <h1>Host Details</h1>
+        </div>
+        <div class="form-content">
+          <form action="/updateHost" method="POST">
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input
+                type="text"
+                id="name"
+                name="name"
+                required="required"
+              />
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                required="required"
+              />
+            </div>
+            <div class="form-group">
+              <label for="phone">Phone</label>
+              <input
+                type="tel"
+                id="phone"
+                name="phone"
+                required="required"
+              />
+            </div>
+            <div class="form-group">
+              <label for="address">Address</label>
+              <input type="text" id="address" name="address" required="required" />
+            </div>
+            <div class="form-group">
+              <button type="submit">Update</button>
+            </div>
+          </form>
+        </div>
       </div>
 
-      <div>
-        <h3>
-          <a
-            ><em
-              ><strong>LEAVING?? please fill following details</strong></em
-            ></a
-          >
-        </h3>
-
-        <form action="/leave" method="post">
-          <label for="email"> Your email</label>
-          <input type="email" name="email" id="email" />
-
-          <div class="row">
-            <input
-              type="submit"
-              class="button-primary three columns"
-              value="submit"
-            />
-          </div>
-        </form>
+      <div class="form-panel two two-two">
+        <div class="form-header">
+          <h1>Visitor Details</h1>
+        </div>
+        <div class="form-content">
+          <form action="\entry" method="POST">
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input
+                type="text"
+                id="name"
+                name="name"
+                required="required"
+              />
+            </div>
+            <div class="form-group">
+              <label for="phone">Phone</label>
+              <input
+                type="tel"
+                id="phone"
+                name="phone"
+                required="required"
+              />
+            </div>
+            <div class="form-group">
+              <label for="email">Email Address</label>
+              <input type="email" id="email" name="email" required="required" />
+            </div>
+            <div class="form-group">
+              <button type="submit">Check In</button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
+   
+    </div>
   </body>
-  <script src="/js/intlTelInput.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/validator/11.1.0/validator.min.js"></script>
-  <script>
-    var input = document.querySelector("#phone");
-    var iti = intlTelInput(input, {
-      initialCountry: "in",
-      preferredCountries: ["in"],
-      separateDialCode: true
-    });
-    updateCountryCode();
-    input.addEventListener("countrychange", function() {
-      updateCountryCode();
-    });
-    function updateCountryCode() {
-      let data = iti.getSelectedCountryData();
-      input.value = data.dialCode;
-    }
-
-    function validateForm() {
-      const [name, email, phone] = document.forms["entryForm"];
-      if (!name.value || !email.value || !phone.value) {
-        alert("none of the below field can be empty !!!, please fill them");
-        return false;
-      }
-      if (!validator.isAlpha(name.value.replace(/ +/g, ""))) {
-        alert("invalid name please re-enter name");
-        return false;
-      }
-      if (!validator.isEmail(email.value)) {
-        alert("invalid email please re-enter email");
-        return false;
-      }
-      if (!validator.isMobilePhone(phone.value)) {
-        alert("invalid phone no , please re-enter phone no");
-        return false;
-      }
-      return true;
-    }
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="js/script.js"></script>
 </html>
