--- a/views/alreadyPresent.html
+++ b/views/alreadyPresent.html
@@ -15,14 +15,14 @@
 
       <div class="form-panel one">
           <div class="form-header">
-            <h1>OOPs!!!!</h1>
+            <h1>Sorry sir!!</h1>
           </div>
           <div class="form-header">
-            <h1 >Something wrong happen!! Please try again </h1>
-            <h1 >Nitin Kumar will fix this porblem later</h1>
+            <h1 >But you have to checkOut first to , checkIn again</h1>
           </div>   
       </div>
     </div>
+
     <script>
       setTimeout(() => {
         window.location = "/";
