--- a/views/hostUpdate.html
+++ b/views/hostUpdate.html
@@ -15,18 +15,18 @@
 
       <div class="form-panel one">
           <div class="form-header">
-            <h1>OOPs!!!!</h1>
+            <h1>DONE!!!!</h1>
           </div>
           <div class="form-header">
-            <h1 >Something wrong happen!! Please try again </h1>
-            <h1 >Nitin Kumar will fix this porblem later</h1>
+            <h1 >Host information has been sucessfully updated </h1>
+            <h1 >everyone form now one will come to visit new Host</h1>
           </div>   
       </div>
     </div>
     <script>
       setTimeout(() => {
         window.location = "/";
-      }, 2000);
+      }, 2500);
     </script>
   </body>
 </html>
