--- a/views/leave.html
+++ b/views/leave.html
@@ -5,25 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
-    />
-    <style>
-      body {
-        background-color: rgb(134, 77, 187);
-      }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        <a>
-          <h1 class="one-half column">Thanks for your Time</h1>
-        </a>
-      </div>
-      <div class="row">
-        <h1 class="one-half column">We Summary of this visit to you</h1>
+    <div class="form">
+      <div class="form-panel two"></div>
+      <div class="form-panel two two-two"></div>
+
+      <div class="form-panel one">
+          <div class="form-header">
+            <h1>Thanks for your Time</h1>
+          </div>
+          <div class="form-header">
+            <h1 >We will send you Summary of this visit</h1>
+          </div>   
       </div>
     </div>
 
