--- a/public/css/style.css
+++ b/public/css/style.css
@@ -204,7 +204,7 @@ html {
     content: '';
     display: block;
     position: absolute;
-    top: 60px;
+    top: 120px;
     left: 1.5%;
     background: rgba(255, 255, 255, 0.2);
     height: 30px;
@@ -215,7 +215,7 @@ html {
     left: 3%;
   }
   .form-panel.two-two:before, .form-panel.two-two:after {
-    top: 60px;
+    
     left: calc(100% - 1.5%);
   }
   .form-panel.two-two:after {
@@ -293,3 +293,57 @@ html {
     color: #4285F4 !important;
   }
   
+
+
+  /*  alert */
+  .modal-table{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    display: table;
+    z-index: 100;
+  }
+  
+  .modal-cell{
+    display: table-cell; 
+    vertical-align: middle;
+    background: rgba(0,0,0,0.90);
+  }
+  
+  .modal-bar{
+    width: 100%;
+    background: #0f8845;
+    color: white;
+    /*margin: 0 auto;*/
+  }
+  
+  .modal-content{
+    width: 50%;
+    padding: 1em;
+    margin: 0 auto;
+    position: relative;
+  }
+  
+  .modal-content button{
+    bottom: 1em;
+    right: 1em;
+    position: absolute;
+  }
+  
+  /* Irrelevent styling */
+
+  
+
+
+  .alertButton
+  {
+    border: 1px solid whitesmoke;
+    color: white;
+    background: #0f8845;
+    padding: .25em .5em;
+    cursor: pointer;
+  }
+  .alertButton:hover{
+    background: #0da24e;
+  }
