--- a/views/home.pug
+++ b/views/home.pug
@@ -3,7 +3,9 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   meta(http-equiv='X-UA-Compatible' content='ie=edge')
-  title Document
+  link(rel='shortcut icon' href='img/favicon.png' )
+  link(rel='icon' href='img/favicon.png')
+  title Entry-manager
   link(rel='stylesheet' href='css/intlTelInput.min.css')
   link(rel='stylesheet' href='css/style.css')
   style.
@@ -72,3 +74,4 @@ script(src='https://cdnjs.cloudflare.com/ajax/libs/validator/11.1.0/validator.mi
 script(src='/js/intlTelInput.min.js')
 script(src='js/validator.js')
 script(src='js/script.js')
+
