--- a/views/message.pug
+++ b/views/message.pug
@@ -3,7 +3,9 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   meta(http-equiv='X-UA-Compatible' content='ie=edge')
-  title Document
+  link(rel='shortcut icon' href='img/favicon.png' )
+  link(rel='icon' href='img/favicon.png')
+  title Entry-manager | message
   link(rel='stylesheet' href='css/style.css')
 .container
   .form
